welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value a
    return a+b
           ^withoutDoubles:3: error: not found: value b
    return a+b
             ^withoutDoubles:5: error: not found: value a
  if (a==6 & noDoubles){
      ^withoutDoubles:9: error: not found: value a
    return 2*a+1
             ^withoutDoubles:11: error: not found: value a
  return 2*a
           ^