welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (die1!=die2 ){
    return a+b
  }
  if (a==6 & noDoubles){
    return 7
  }
  if (noDoubles){
    return 2*a+1
  }
  return 2*a
}